src/test/contracts/negative/dynamic_entry_wrong_storage.mligo
type storage =
  {
    storage : int;
    dynamic_entrypoints;
    extra : int
  }

[@entry]
  let foo () (_ : storage) : operation list * storage = failwith ()